# AI4ES

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GUIDE_GITFLOW.md  README.md  Sinteze_dos_Beneficios.ipynb  arquivo_bugado.js  requirements.txt  revisor-pipeline-backup.yml  teste_linter.py
adk/: .env.example  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  doubt_artifact_revisao.md  llm_config.yaml  main.py  prompt-test.md  prompt_qa_testing.md  pyproject.toml  validador.py
adk/agents/roles/architect/: agent.py  prompt.py  schemas.py
adk/agents/roles/coder/: agent.py  prompt.py  schemas.py
adk/agents/roles/design_architect/: agent.py
adk/agents/roles/finalizer/: agent.py  prompt.py  schemas.py
adk/agents/roles/io_agent/: agent.py  prompt.py  prompt_complexa.py
adk/agents/roles/markdown_specialist/: agent.py  prompt.py
adk/agents/roles/mermaid_specialist/: agent.py  prompt.py
adk/agents/roles/orchestrator/: agent.py  prompt.py
adk/agents/roles/qa_agent/: README.md  TESTES.md  agent.py  qa_prompt.py
adk/agents/roles/requirements/: README.md  __init__.py  agent.py  few_shot.py  prompt.py  schemas.py  tools_requirements.py
adk/agents/roles/reviewer/: agent.py  prompt.py  schemas.py
adk/agents/roles/test_planner/: agent.py  (+2 more)
adk/agents/sequencer/: contract.py  resilience.py
adk/app/: main.py
adk/runners/orchestrator/: agent.py
adk/runners/reviewer/: agent.py
adk/runners/sequencer/: agent.py
adk/scripts/: check_usage.py  validador.py
adk/shared/: capabilities.py  factory.py  llm.py
adk/shared/llm/: __init__.py  client.py  router.py
adk/shared/templates/: relatorio_template.md
adk/shared/tools/: __init__.py  date.py  doubt_generator_analista.py  doubt_handler.py  filesystem.py  git.py  glossary_tool.py  requirements.py  search_tool.py  slicer_tool.py
adk/src/: index.html
adk/src/api/: routes.py
adk/src/schemas/: request_response.py
adk/src/services/: vowel_counter.py
adk/src/styles/: main.css
adk/testesLocal/: hu_autenticacao.md  prompt_qa_testing.md  test_scenario.py
adk/testesValidador/: test_validador.py  teste_linter.py
adk/tests/: conftest.py
adk/tests/unit/: test_check_usage.py  test_filesystem_tools.py  test_geracao_condicional.py  test_git_tools.py  test_linter.py  test_llm.py  test_llm_router.py  test_requirements.py  test_revisor.py  test_sequencer.py  test_validador.py
(+295 files in other folders)
